assets/css/style.css
:root{
  --gokuOrange: rgb(209, 112, 21);
  --gokuBlue: rgb(1, 1, 105);
  --piccoloPurple: rgb(91, 7, 160);
  --piccoloWhite: white;
  --backgroundWhite: rgba(255, 255, 255, 0.85);
}

html {
  background: url(../images/background.jpg) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

@font-face {
  font-family: Saiyan-sans;
  src: url(../Saiyan-Sans.ttf);
}

h1{
  font-size: 4em;
  text-align: center;
  width: fit-content;
  padding: 20px;
  margin: 30px auto;
  color: var(--piccoloWhite);
  font-family: Saiyan-sans;
  background: var(--piccoloPurple);
  box-shadow: 3px 3px 5px var(--piccoloWhite) inset, -3px -3px 5px var(--piccoloWhite) inset;
}

.btn {
  padding: 10px;
  margin: 5vh auto;
  display: block;
  width: fit-content;
  font-weight: bolder;
  text-decoration: none;
  color: var(--gokuBlue);
  background: var(--gokuOrange);
  box-shadow: 3px 3px 3px rgb(71, 71, 71);
  border-radius: 5px;
  border: none;
}

.upperBox {
  display: flex;
  justify-content: space-between;
  width: 70%;
  margin: 0 auto;
  margin-bottom: 20px;
}

.alertBox {
  opacity: 0;
  font-size: 1.5em;
  background: rgba(255, 0, 0, 0.85);
  border: 3px solid red;
  padding: 10px;
  border-radius: 2px;
  width: fit-content;
  height: fit-content;
  color: var(--gokuBlue);
  /*given showAlert animation via js*/
}

@keyframes showAlert {
  0% {opacity: 0;}
  50% {opacity: 1;}
  100%{opacity: 0;}
}

.timerBox {
  font-size: 1.5em;
  background: var(--backgroundWhite);
  border: 3px solid var(--gokuOrange);
  padding: 10px;
  border-radius: 2px;
  width: fit-content;
  color: var(--gokuBlue);
}

#timer {
  /* margin: 0 10px; */
  font-size: 1.5em;
  text-align: center;
  color: var(--gokuBlue);
}

#contentBox {
  position: relative;
  width: 70%;
  min-height: 200px;
  margin: 0 auto;
  border-radius: 2px;
  border: 10px solid var(--gokuOrange);
  background: var(--backgroundWhite);
}

#question {
  visibility: hidden; /*change to visible*/
  font-size: 2em;
  margin: 15px;
  color: var(--gokuBlue);
  border-bottom: 2px solid var(--gokuOrange);
  text-align: center;
}

#answersBox {
  visibility: hidden;/*change to visible*/
  display:flex;  
  justify-content: space-evenly;
  flex-wrap: wrap;
}

#answersBox p {
  font-size: 2em;
  border-radius: 2px;
  border: 2px solid var(--gokuOrange);
  flex-basis: 45%;
  text-align: center;
  color: var(--gokuBlue);
  padding: 20px 0;
  margin: 10px;
}

#answersBox p:hover {
  background: var(--gokuOrange);
  border: 2px solid var(--gokuBlue)
}

#endQuiz {
  display: none;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#startOverlay {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}

#startOverlay p {
  color: var(--gokuBlue);
  font-size: 2em;

}

#quizScore {
  text-align: center;
  font-size: 1.5em;
  color: var(--gokuBlue);
}

#imgAndInput {
  display: flex;
  justify-content: space-evenly;
  height: 100%;
  width: 100%;
}

#image {
  height: 150px;
  display: inline;
}

.inputForm {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

label {
  font-size: 1.3em;
  color: var(--gokuBlue);
}

input {
  border: 1px solid var(--gokuBlue);
}

.overTop {
  background: var(--backgroundWhite);
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}

/*score board styles*/
#scoreBoard {
  border:5px solid var(--gokuBlue);
  background-color: var(--backgroundWhite);
  margin: 0 auto;
  width: 50%;
  font-weight: bold;
  color: var(--gokuBlue);
}

tr {
  border-bottom: 3px solid var(--gokuOrange);
}

tr:nth-child(even){
  background-color:rgba(247, 211, 120, 0.85);
}

tr:hover {
  background-color: rgb(255, 197, 49);
}

td, th {
  padding: 8px;
  border: 2px solid var(--gokuOrange);
}

th {
  background-color: var(--gokuOrange);
  color: var(--gokublue);
}

@media  screen and (max-width: 1070px) {
  #firstMain {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  #contentBox, .upperBox {
    width: 80%;
  }

  .timerBox{
    margin-left: 0;
    margin-bottom: 20px;
  }
}

@media (hover: none) and (pointer: coarse) {

  #firstMain {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  h1 {
    font-size: 6em;
  }

  .btn {
    font-size: 3em;
  }

  .timerBox {
    margin-left: 0;
    font-size: 3em;
    margin-bottom: 25px;
    width: 20%;
  }

  #question {
    font-size: 5em;
  }

  #answersBox p {
    font-size: 4em;
    flex-basis: 90%;
  }

  #quizScore {
    font-size: 4em;
  }

  #imgAndInput {
    flex-direction: column;
    width: inherit;
  }

  #image {
    height: 400px;
  }

  label {
    font-size: 3em;
  }

  input {
    height: 60px;
    width: 70%;
  }
  /*score board styles*/

  #board {
    width: 90%;
  }

  #scoreBoard {
    font-size: 4em;
    width: 90%;
  }
}

